# verilook_ros

./: README.md  package.xml
ros/include/: face_recognition_verilook_node.h  verilook_wrapper.h
ros/launch/: face_recognition_node.launch  face_recognition_nodelet.launch
ros/src/: face_recognition_verilook_node.cpp  face_recognition_verilook_nodelet.cpp  verilook_wrapper.cpp
verilook_ros/: CMakeLists.txt  nodelet_face_recognition_verilook.xml  package.xml
verilook_ros/ros/include/: face_detection_verilook_node.h  face_recognition_verilook_node.h  verilook_enroll_from_image.h  verilook_wrapper.h
verilook_ros/ros/launch/: face_detection_node.launch  face_recognition_node.launch  face_recognition_nodelet.launch
verilook_ros/ros/src/: face_detection_verilook_node.cpp  face_recognition_verilook_node.cpp  verilook_enroll_from_image.cpp  verilook_wrapper.cpp
